tests/machine/x/c/exists_builtin.error
line: 0
error: output mismatch
-- got --
1835241490
-- want --
true
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
