tests/machine/x/c/exists_builtin.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int main() {
  list_int data = list_int_create(2);
  data.data[0] = 1;
  data.data[1] = 2;
  list_int tmp1 = list_int_create(2);
  tmp1.data[0] = 1;
  tmp1.data[1] = 2;
  list_int tmp2 = list_int_create(2);
  int tmp3 = 0;
  for (int tmp4 = 0; tmp4 < 2; tmp4++) {
    int x = tmp1.data[tmp4];
    if (!(x == 1)) {
      continue;
    }
    tmp2.data[tmp3] = x;
    tmp3++;
  }
  tmp2.len = tmp3;
  int flag = tmp2.len > 0;
  printf("%d\n", (flag) ? "true" : "false");
  free(tmp2.data);
  return 0;
}
